<resources>
    <string name="app_name">CookBookApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search_recipes">Search recipes</string>
    <string name="search">Search</string>
    <string name="name">Name: </string>
    <string name="servings">Servings: </string>
    <string name="preparation_time">Preparation time: </string>
    <string name="recipe_name">Recipe name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="extract_recipe">Extract recipe</string>
    <string name="url">URL</string>
    <string name="favourite_recipes">Favourite recipes</string>
</resources>