<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.cookbookapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search_food"
        android:name="com.example.cookbookapp.ui.search_recipes.SearchRecipeFragment"
        android:label="@string/search_recipes"
        tools:layout="@layout/fragment_search_recipes">
        <action
            android:id="@+id/action_fragment_search_recipes_to_fragment_search_recipes_details"
            app:destination="@+id/navigation_search_food_details"
            />
    </fragment>

    <fragment
        android:id="@+id/navigation_search_food_details"
        android:name="com.example.cookbookapp.ui.search_recipes.SearchRecipeDetailsFragment"
        android:label="Recipe Details"
        tools:layout="@layout/fragment_search_recipes_details" />

    <fragment
        android:id="@+id/navigation_extract_recipe"
        android:name="com.example.cookbookapp.ui.extract_recipe.ExtractRecipeFragment"
        android:label="@string/extract_recipe"
        tools:layout="@layout/fragment_extract_recipe" >
        <action
            android:id="@+id/action_fragment_extract_recipe_to_fragment_extract_recipe_details"
            app:destination="@+id/navigation_extract_recipe_details"
            />
    </fragment>

    <fragment
        android:id="@+id/navigation_extract_recipe_details"
        android:name="com.example.cookbookapp.ui.extract_recipe.ExtractRecipeDetailsFragment"
        android:label="Extracted Recipe"
        tools:layout="@layout/fragment_extract_recipe_details" />

</navigation>